deploy: 4607e5f28e099ca0bdad39dcf59503c25c73f816

--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ window.onload = wrap_img;
       </div>
     </div>
 
-    <div class="social-links"><ul class="social-media-list"><li><a rel="me" href="https://github.com/d3LA" title="d3LA"><svg class="svg-icon grey"><use xlink:href="/wOL3/assets/minima-social-icons.svg#github"></use></svg></a></li><li><a rel="me" href="https://twitter.com/d3LA" title="d3LA"><svg class="svg-icon grey"><use xlink:href="/wOL3/assets/minima-social-icons.svg#twitter"></use></svg></a></li></ul>
+    <div class="social-links"><ul class="social-media-list"><li><a rel="me" href="https://github.com/d3LA" title="d3LA"><svg class="svg-icon grey"><use xlink:href="/wOL3/assets/minima-social-icons.svg#github"></use></svg></a></li><li><a rel="me" href="https://twitter.com/victorWorlanyo" title="victorWorlanyo"><svg class="svg-icon grey"><use xlink:href="/wOL3/assets/minima-social-icons.svg#twitter"></use></svg></a></li></ul>
 </div>
 
   </div>
