--- a/about/index.html
+++ b/about/index.html
@@ -76,7 +76,7 @@ window.onload = wrap_img;
     <!--This website is powered by **[fastpages](https://github.com/fastai/fastpages)** [^1].-->
 
 <!--[^1]:a blogging platform that natively supports Jupyter notebooks in addition to other formats.-->
-<p>Compassion&amp;Love; Truth&amp;Conviction</p>
+<p>Love&amp;Compassion; Truth&amp;Conviction</p>
 
   </div>
 
