--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
 <link rel="canonical" href="https://d3la.github.io/wOL3/" />
 <meta property="og:url" content="https://d3la.github.io/wOL3/" />
 <meta property="og:site_name" content="d3LA Analytics" />
-<meta property="og:image" content="https://d3la.github.io/wOL3/images/logo.png" />
+<meta property="og:image" content="https://d3la.github.io/wOL3/images/sprouting-whale_logo.png" />
 <script type="application/ld+json">
-{"description":"Series of Projects I have been working on.","url":"https://d3la.github.io/wOL3/","@type":"WebSite","headline":"d3LA Analytics","image":"https://d3la.github.io/wOL3/images/logo.png","name":"d3LA Analytics","@context":"https://schema.org"}</script>
+{"description":"Series of Projects I have been working on.","url":"https://d3la.github.io/wOL3/","@type":"WebSite","headline":"d3LA Analytics","image":"https://d3la.github.io/wOL3/images/sprouting-whale_logo.png","name":"d3LA Analytics","@context":"https://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
 <link rel="stylesheet" href="/wOL3/assets/css/style.css"><link type="application/atom+xml" rel="alternate" href="https://d3la.github.io/wOL3/feed.xml" title="d3LA Analytics" /><link rel="shortcut icon" type="image/x-icon" href="/wOL3/images/favicon.ico"><link href="https://cdn.jsdelivr.net/npm/@primer/css/dist/primer.css" rel="stylesheet" />
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free/css/all.css">
