deploy: 14c619b74d2e3bd9a6240836107ef8e2035902fe

--- a/about/index.html
+++ b/about/index.html
@@ -14,7 +14,7 @@
 <meta property="og:url" content="https://d3la.github.io/wOL3/about/" />
 <meta property="og:site_name" content="d3LA Analytics" />
 <script type="application/ld+json">
-{"description":"Series of Projects I have been working on.","url":"https://d3la.github.io/wOL3/about/","@type":"WebSite","headline":"About Me","name":"d3LA Analytics","@context":"https://schema.org"}</script>
+{"url":"https://d3la.github.io/wOL3/about/","@type":"WebSite","headline":"About Me","name":"d3LA Analytics","description":"Series of Projects I have been working on.","@context":"https://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
 <link rel="stylesheet" href="/wOL3/assets/css/style.css"><link type="application/atom+xml" rel="alternate" href="https://d3la.github.io/wOL3/feed.xml" title="d3LA Analytics" /><link rel="shortcut icon" type="image/x-icon" href="/wOL3/images/favicon.ico"><link href="https://cdn.jsdelivr.net/npm/@primer/css/dist/primer.css" rel="stylesheet" />
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free/css/all.css">
