--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@ search_exclude: true
 <!--image: images/sprouting-whale_logo.png-->
 ---
 
+![]({{site.baseurl}}/images/sprouting-whale_logo.png "https://github.com/d3LA/wOL3")
 
 <!--This site is built with [fastpages](https://github.com/fastai/fastpages), An easy to use blogging platform with extra features for Jupyter Notebooks.
 
