deploy: 97249afd9a589e1401c657b29206308c6018f5ff

--- a/index.html
+++ b/index.html
@@ -82,7 +82,9 @@ window.onload = wrap_img;
 </header>
 <main class="page-content" aria-label="Content">
       <div class="wrapper">
-        <div class="home"><!--This site is built with [fastpages](https://github.com/fastai/fastpages), An easy to use blogging platform with extra features for Jupyter Notebooks.
+        <div class="home"><p><img src="/wOL3/images/sprouting-whale_logo.png" alt="" title="https://github.com/d3LA/wOL3" /></p>
+
+<!--This site is built with [fastpages](https://github.com/fastai/fastpages), An easy to use blogging platform with extra features for Jupyter Notebooks.
 
 ![](/wOL3/images/diagram.png "https://github.com/fastai/fastpages")
 
