--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: home
 search_exclude: true
-<!--image: images/sprouting-whale_logo.png-->
+image: images/sprouting-whale_logo.png
 ---
 
 ![]({{site.baseurl}}/images/sprouting-whale_logo.png "https://github.com/d3LA/wOL3")
