--- a/index.html
+++ b/index.html
@@ -13,9 +13,8 @@
 <link rel="canonical" href="https://d3la.github.io/wOL3/" />
 <meta property="og:url" content="https://d3la.github.io/wOL3/" />
 <meta property="og:site_name" content="d3LA" />
-<meta property="og:image" content="https://d3la.github.io/wOL3/images/sprouting-whale_logo.png" />
 <script type="application/ld+json">
-{"url":"https://d3la.github.io/wOL3/","@type":"WebSite","headline":"d3LA","image":"https://d3la.github.io/wOL3/images/sprouting-whale_logo.png","name":"d3LA","description":"Series of Projects I have been working on.","@context":"https://schema.org"}</script>
+{"url":"https://d3la.github.io/wOL3/","@type":"WebSite","headline":"d3LA","name":"d3LA","description":"Series of Projects I have been working on.","@context":"https://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
 <link rel="stylesheet" href="/wOL3/assets/css/style.css"><link type="application/atom+xml" rel="alternate" href="https://d3la.github.io/wOL3/feed.xml" title="d3LA" /><link rel="shortcut icon" type="image/x-icon" href="/wOL3/images/favicon.ico"><link href="https://cdn.jsdelivr.net/npm/@primer/css/dist/primer.css" rel="stylesheet" />
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free/css/all.css">
@@ -83,7 +82,7 @@ window.onload = wrap_img;
 </header>
 <main class="page-content" aria-label="Content">
       <div class="wrapper">
-        <div class="home"><p><img src="/wOL3/images/sprouting-whale_logo.png" alt="" title="https://github.com/d3LA/wOL3" /></p>
+        <div class="home"><p><img src="/wOL3/images/sprouting-whale_logo.png" alt="" /></p>
 
 <!--This site is built with [fastpages](https://github.com/fastai/fastpages), An easy to use blogging platform with extra features for Jupyter Notebooks.
 
