--- a/index.html
+++ b/index.html
@@ -1,10 +1,8 @@
 ---
 layout: home
 search_exclude: true
-<!--image: images/sprouting-whale_logo.png-->
+image: images/sprouting-whale_logo.png
 ---
-
-![]({{site.baseurl}}/images/sprouting-whale_logo.png)
 
 <!--This site is built with [fastpages](https://github.com/fastai/fastpages), An easy to use blogging platform with extra features for Jupyter Notebooks.
 
