--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@ window.onload = wrap_img;
 
 You can edit the `index.html` file to change this content.-->
 
-<h1 id="posts">Posts</h1>
+<h1 id="projects">Projects</h1>
 
 
 
